--- a/Tuto/index.html
+++ b/Tuto/index.html
@@ -40,6 +40,17 @@
             </div>
         </section>
     </header>
+    <section class="presentation second">
+        <div class="product">
+            <p class="new">Nouveau produit disponible</p>
+            <h1>Le nouveau casque HeadBoost</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate distinctio quas modi consequatur? Velit odio ipsa voluptas iure recusandae nisi? Ea earum ipsum dignissimos placeat ipsa voluptatum iusto maiores illo!</p>
+            <button>Voir les spécifications</button>
+        </div>
+        <div class="images">
+            <img src="" alt="">
+        </div>
+    </section>
 
 
                                                                                                                                                          
