--- a/Tuto/index.html
+++ b/Tuto/index.html
@@ -48,9 +48,30 @@
             <button>Voir les spécifications</button>
         </div>
         <div class="images">
-            <img src="" alt="">
+            <img src="https://cdn.shopify.com/s/files/1/2654/0420/products/RECONSPARK_HEADSET_1_e87826ec-226a-4ce0-8782-42403e33a376_480x480.png?v=1571871155" alt="">
         </div>
     </section>
+    <footer>
+        <div class="column">
+            <h3>Aide</h3>
+            <p>contact@headboost.fr</p>
+            <p>Contactez-nous</p>
+            <p>Comment achetez</p>
+        </div>
+        <div class="column">
+            <h3>Recrutement</h3>
+            <p>bussiness@headboost.fr</p>
+            <p>Postulez en ligne</p>
+            <p>Comment faire</p>
+        </div>
+        <div class="column">
+            <h3>Réseaux</h3>
+            <p>Facebook </p>
+            <p>twitter</p>
+            <p>Instagram</p>
+        </div>
+
+    </footer>
 
 
                                                                                                                                                          
